welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
if (estSurBiscuit())
	{
	prendBiscuit();
		if (!estSurBiscuit()); {avance()};
		else {recule(); poseBiscuit(); recule();}
	}
else { while (!estSurBiscuit())
		{recule()}
	}
		
